--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,23 @@
 blinker==1.4
-Click==7.0
-dominate==2.4.0
-Flask==1.1.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.1.3
+dominate==2.6.0
+Flask==2.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-Mail==0.9.1
-Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.3
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.1
-MarkupSafe==1.1.1
-pdfkit==0.6.1
-pyodbc==4.0.30
-python-dotenv==0.12.0
-pytz==2020.4
-SQLAlchemy==1.3.13
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
+idna==3.3
+importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+python-dotenv==0.20.0
+requests==2.27.1
+SQLAlchemy==1.4.36
+typing_extensions==4.2.0
+urllib3==1.26.9
 visitor==0.1.3
-Werkzeug==1.0.0
-WTForms==2.3.1
+Werkzeug==2.1.2
+zipp==3.8.0
