--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+pyodbc==4.0.32
 python-dotenv==0.20.0
+pytz==2022.1
 requests==2.27.1
 SQLAlchemy==1.4.36
 typing_extensions==4.2.0
