--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,37 @@
+appdirs==1.4.4
+argcomplete==2.0.0
 blinker==1.4
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.3
 dominate==2.6.0
+escpos==1.9
 Flask==2.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.5.1
+future==0.18.2
 greenlet==1.1.2
 idna==3.3
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+Pillow==9.1.1
 pyodbc==4.0.32
+pyserial==3.5
+python-barcode==0.14.0
 python-dotenv==0.20.0
 pytz==2022.1
+pyusb==1.2.1
+PyYAML==6.0
+qrcode==7.3.1
 requests==2.27.1
+six==1.16.0
 SQLAlchemy==1.4.36
 typing_extensions==4.2.0
 urllib3==1.26.9
+viivakoodi==0.8.0
 visitor==0.1.3
 Werkzeug==2.1.2
 zipp==3.8.0
